[gd_scene load_steps=2 format=3 uid="uid://b8fb74dsc1kel"]

[ext_resource type="Script" path="res://UIs/sanctum_ui.gd" id="1_sanctum"]

[node name="Sanctum" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sanctum")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "SANCTUM - CHARACTER PROGRESSION"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/TopBar"]
layout_mode = 2
text = "‚Üê BACK TO MENU"

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="True" type="Control" parent="MainContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/True"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RosterInfo" type="VBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2

[node name="RosterLevelLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/RosterInfo"]
layout_mode = 2
text = "Roster Level: 3"

[node name="AvailablePointsLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/RosterInfo"]
layout_mode = 2
text = "Available Upgrade Points: 0"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2

[node name="ClassSummary" type="VBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2

[node name="SwordsmanSummary" type="Control" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/SwordsmanSummary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/SwordsmanSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Swordsman Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/SwordsmanSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "XP: 0 (+100 to next)"

[node name="ArcherSummary" type="Control" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/ArcherSummary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/ArcherSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Archer Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/ArcherSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "XP: 0 (+100 to next)"

[node name="PyromancerSummary" type="Control" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/PyromancerSummary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/PyromancerSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pyromancer Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer/ClassSummary/PyromancerSummary/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "XP: 0 (+100 to next)"

[node name="HSeparator3" type="HSeparator" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2

[node name="UpgradesTitle" type="Label" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2
text = "Roster Upgrades (Apply to All Classes)"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/True/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="MainContainer/TabContainer/True/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Swordsman" type="Control" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Swordsman"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassInfo" type="VBoxContainer" parent="MainContainer/TabContainer/Swordsman/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/Swordsman/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Swordsman Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/Swordsman/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Experience: 0 (+100 to next)"

[node name="PointsLabel" type="Label" parent="MainContainer/TabContainer/Swordsman/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Available Upgrade Points: 0"

[node name="HSeparator" type="HSeparator" parent="MainContainer/TabContainer/Swordsman/VBoxContainer"]
layout_mode = 2

[node name="UpgradesTitle" type="Label" parent="MainContainer/TabContainer/Swordsman/VBoxContainer"]
layout_mode = 2
text = "Swordsman Upgrades"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/Swordsman/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Swordsman/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Archer" type="Control" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Archer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassInfo" type="VBoxContainer" parent="MainContainer/TabContainer/Archer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/Archer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Archer Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/Archer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Experience: 0 (+100 to next)"

[node name="PointsLabel" type="Label" parent="MainContainer/TabContainer/Archer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Available Upgrade Points: 0"

[node name="HSeparator" type="HSeparator" parent="MainContainer/TabContainer/Archer/VBoxContainer"]
layout_mode = 2

[node name="UpgradesTitle" type="Label" parent="MainContainer/TabContainer/Archer/VBoxContainer"]
layout_mode = 2
text = "Archer Upgrades"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/Archer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Archer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Pyromancer" type="Control" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Pyromancer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClassInfo" type="VBoxContainer" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Pyromancer Level: 1"

[node name="ExpLabel" type="Label" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Experience: 0 (+100 to next)"

[node name="PointsLabel" type="Label" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer/ClassInfo"]
layout_mode = 2
text = "Available Upgrade Points: 0"

[node name="HSeparator" type="HSeparator" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer"]
layout_mode = 2

[node name="UpgradesTitle" type="Label" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer"]
layout_mode = 2
text = "Pyromancer Upgrades"

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="MainContainer/TabContainer/Pyromancer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
